--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 [platformio]
-env_default = development
+env_default = nodemcuv2
 ;env_default = nodemcuv2, nodemcuv2-multisensor, distilling, spargeheater, dualheater
 
 [common_env_data]
