--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 [platformio]
-env_default = development
+env_default = nodemcuv2
 ;env_default = nodemcuv2, nodemcuv2-multisensor, distilling, spargeheater, dualheater, nodemcuv2-d1pro, nodemcuv2-multisensor-d1pro
 
 [common_env_data]
@@ -42,7 +42,7 @@ upload_speed = 115200
 platform = espressif8266@~2.3.3
 board = nodemcuv2
 framework = arduino
-build_flags = -Wl,-Tesp8266.flash.4m2m.ld 
+build_flags = -Wl,-Tesp8266.flash.4m1m.ld -DDebugOutput=true -DUsePaddleInsteadOfPumpEnabled=true
 
 monitor_speed = 115200
 lib_deps = ${common_env_data.lib_deps_external} 
