new adjustments for brewbunny

--- a/html/package.json
+++ b/html/package.json
@@ -25,5 +25,8 @@
         "grunt-postcss": "^0.8.0",
         "grunt-processhtml": "^0.4.1",
         "load-grunt-tasks": "^3.5.2"
+    },
+    "dependencies": {
+        "coffeescript": "^2.5.1"
     }
 }
