--- a/platformio.ini
+++ b/platformio.ini
@@ -7,6 +7,11 @@
 ;
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
+
+; build html with grunt build in html subdir
+; after update upload new html under http://192.168.10.107:8008/filemanager
+
+
 [platformio]
 env_default = nodemcuv2
 ;env_default = esp32, nodemcuv2, nodemcuv2-italiano, nodemcuv2-portuguese-br, nodemcuv2-spanish, nodemcuv2-russian, nodemcuv2-multisensor, distilling, spargeheater, dualheater, nodemcuv2-d1pro, nodemcuv2-multisensor-d1pro
@@ -89,7 +94,7 @@ framework = arduino
 build_flags = -Wl,-Tesp8266.flash.4m1m.ld -DDebugOutput=true -DUsePaddleInsteadOfPump=true 
 lib_deps = ${common_env_data.lib_deps_external} 
 lib_extra_dirs = ./lib-esp8266
-upload_port =  /dev/cu.wchusbserial1410
+
 
 [env:nodemcuv2-italiano]
 platform = espressif8266@~2.3.3
