include bm-util

--- a/platformio.ini
+++ b/platformio.ini
@@ -94,6 +94,7 @@ framework = arduino
 build_flags = -Wl,-Tesp8266.flash.4m1m.ld -DDebugOutput=true -DUsePaddleInsteadOfPump=true 
 lib_deps = ${common_env_data.lib_deps_external} 
 lib_extra_dirs = ./lib-esp8266
+upload_port = /dev/tty.SLAB_USBtoUART
 
 
 [env:nodemcuv2-italiano]
