--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; http://docs.platformio.org/page/projectconf.html
 
 ; build html with grunt build in html subdir
-; after update upload new html under http://192.168.10.107:8008/filemanager
+; after update upload new html under http://brewmaniac:rdwhahb!@192.168.10.107:8008/filemanager
 
 
 [platformio]
