--- a/platformio.ini
+++ b/platformio.ini
@@ -7,13 +7,8 @@
 ;
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
-
-; build html with grunt build in html subdir
-; after update upload new html under http://brewmaniac:rdwhahb!@192.168.10.107:8008/filemanager
-
-
 [platformio]
-env_default = nodemcuv2
+default_envs = esp32-dev
 #default_envs = esp32-oled, esp32, nodemcuv2, nodemcuv2-italiano, nodemcuv2-portuguese-br, nodemcuv2-spanish, nodemcuv2-russian, nodemcuv2-multisensor, distilling, spargeheater, dualheater, nodemcuv2-d1pro, nodemcuv2-multisensor-d1pro
 
 include_dir= locales/
@@ -23,7 +18,7 @@ lib_deps_external =
     ArduinoJson@6.19.3
     https://github.com/arjenhiemstra/ESPAsyncWebServer#43381ab7fb6345aae5f81a06d49747c624406706
 
-esp32_framework =  espressif32@~2.0.0
+esp32_framework =  espressif32@~3.5.0
 esp32_lib =  ./lib-esp32
 
 esp8266_framework = espressif8266@~3.2.0
@@ -31,6 +26,7 @@ esp8266_lib = ./lib-esp8266
 
 lib_deps_external_esp32 = ${common_env_data.lib_deps_external}
     https://github.com/me-no-dev/AsyncTCP#ca8ac5f919d02bea07b474531981ddbfd64de97c
+
 
 [env:esp32-dev]
 platform =  ${common_env_data.esp32_framework}
@@ -97,28 +93,6 @@ lib_deps = ${common_env_data.lib_deps_external}
 monitor_speed = 115200
 upload_speed = 115200
 ;monitor_filters = esp8266_exception_decoder
-[env:esp32-dev]
-platform = ${common_env_data.esp32_framework}
-board = esp32dev
-framework = arduino
-board_build.mcu = esp32
-lib_extra_dirs = 
-    ./lib-esp32
-
-board_build.partitions = default.csv
-
-build_flags =
-    -DOLED_LCD=true
-    -DSerialDebug=true
-;    -DMultipleSensorEnabled=true  
-;    -DFakeHeating=true
-
-monitor_speed = 115200
-lib_deps = ${common_env_data.lib_deps_external} 
-
-upload_port = /dev/cu.SLAB_USBtoUART
-monitor_port = /dev/cu.SLAB_USBtoUART
-
 
 
 [env:esp32]
@@ -142,12 +116,12 @@ lib_deps = ${common_env_data.lib_deps_external_esp32}
 platform =  ${common_env_data.esp8266_framework}
 board = nodemcuv2
 framework = arduino
-build_flags = -Wl,-Tesp8266.flash.4m1m.ld -DDebugOutput=true -DUsePaddleInsteadOfPump=true 
+build_flags = -Wl,-Tesp8266.flash.4m2m.ld  
+
 lib_deps = ${common_env_data.lib_deps_external} 
 lib_extra_dirs = ./lib-esp8266
-upload_port = /dev/tty.SLAB_USBtoUART
 ;upload_port =  /dev/cu.wchusbserial1410
-;upload_port = /dev/cu.usbserial-1410
+upload_port = /dev/cu.usbserial-1410
 
 [env:nodemcuv2-italiano]
 platform = ${common_env_data.esp8266_framework}
