--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 [platformio]
-default_envs = esp32-dev
+default_envs = nodemcuv2
 #default_envs = esp32-oled, esp32, nodemcuv2, nodemcuv2-italiano, nodemcuv2-portuguese-br, nodemcuv2-spanish, nodemcuv2-russian, nodemcuv2-multisensor, distilling, spargeheater, dualheater, nodemcuv2-d1pro, nodemcuv2-multisensor-d1pro
 
 include_dir= locales/
@@ -116,12 +116,11 @@ lib_deps = ${common_env_data.lib_deps_external_esp32}
 platform =  ${common_env_data.esp8266_framework}
 board = nodemcuv2
 framework = arduino
-build_flags = -Wl,-Tesp8266.flash.4m2m.ld  
+build_flags = -Wl,-Tesp8266.flash.4m1m.ld -DDebugOutput=true -DUsePaddleInsteadOfPump=true 
 
 lib_deps = ${common_env_data.lib_deps_external} 
 lib_extra_dirs = ./lib-esp8266
-;upload_port =  /dev/cu.wchusbserial1410
-upload_port = /dev/cu.usbserial-1410
+upload_port = /dev/tty.SLAB_USBtoUART
 
 [env:nodemcuv2-italiano]
 platform = ${common_env_data.esp8266_framework}
