--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 [platformio]
-default_envs = esp32-dev
+default_envs = nodemcuv2
 #default_envs = esp32-oled, esp32, nodemcuv2, nodemcuv2-italiano, nodemcuv2-portuguese-br, nodemcuv2-spanish, nodemcuv2-russian, nodemcuv2-multisensor, distilling, spargeheater, dualheater, nodemcuv2-d1pro, nodemcuv2-multisensor-d1pro
 
 include_dir= locales/
@@ -121,7 +121,7 @@ build_flags = -Wl,-Tesp8266.flash.4m2m.ld
 lib_deps = ${common_env_data.lib_deps_external} 
 lib_extra_dirs = ./lib-esp8266
 ;upload_port =  /dev/cu.wchusbserial1410
-upload_port = /dev/cu.usbserial-1410
+upload_port = /dev/cu.usbserial-0001
 
 [env:nodemcuv2-italiano]
 platform = ${common_env_data.esp8266_framework}
