--- a/platformio.ini
+++ b/platformio.ini
@@ -105,8 +105,7 @@ lib_extra_dirs =
 
 board_build.partitions = default.csv
 
-build_flags =
-;    -DSerialDebug=true
+build_flags = -DUsePaddleInsteadOfPump=true -DSerialDebug=true
 
 monitor_speed = 115200
 lib_deps = ${common_env_data.lib_deps_external_esp32} 
@@ -116,7 +115,7 @@ lib_deps = ${common_env_data.lib_deps_external_esp32}
 platform =  ${common_env_data.esp8266_framework}
 board = nodemcuv2
 framework = arduino
-build_flags = -Wl,-Tesp8266.flash.4m2m.ld  
+build_flags = -Wl,-Tesp8266.flash.4m2m.ld  -DUsePaddleInsteadOfPump=true -DSerialDebug=true
 
 lib_deps = ${common_env_data.lib_deps_external} 
 lib_extra_dirs = ./lib-esp8266
