Use Paddle instead of Pump

--- a/platformio.ini
+++ b/platformio.ini
@@ -105,8 +105,7 @@ lib_extra_dirs =
 
 board_build.partitions = default.csv
 
-build_flags =
-;    -DSerialDebug=true
+build_flags = -DUsePaddleInsteadOfPump=true -DSerialDebug=true
 
 monitor_speed = 115200
 lib_deps = ${common_env_data.lib_deps_external_esp32} 
